@@ -1,7 +1,7 @@
 Package: RQDA
 Type: Package
 Title: Qualitative data analysis
-Version: 0.1.5-24
+Version: 0.1.5-25
 Date: 2008-11-01
 Author: Huang Ronggui
 Maintainer: Huang <ronggui.huang@gmail.com>
