@@ -37,11 +37,13 @@ AddCodeCatButton <- function(label="ADD"){
   gbutton(label,handler=function(h,...) {
     if (is_projOpen(env=.rqda,conName="qdacon")) {
       item <- ginput("Enter new Code Category. ", icon="info")
-      Encoding(item) <- "UTF-8"
-      AddTodbTable(item,"codecat",Id="catid") ## CODE CATegory
-      UpdateTableWidget(Widget=.rqda$.CodeCatWidget,FromdbTable="codecat")
+      if (item!=""){
+        Encoding(item) <- "UTF-8"
+        AddTodbTable(item,"codecat",Id="catid") ## CODE CATegory
+        UpdateTableWidget(Widget=.rqda$.CodeCatWidget,FromdbTable="codecat")
+      }
     }
-          }
+  }
           )
 }
 
@@ -85,10 +87,12 @@ CodeCat_RenameButton <- function(label="Rename",Widget=.rqda$.CodeCatWidget,...)
       }
       else {
         ## get the new file names
-        NewName <- ginput("Enter new Cateory name. ", icon="info")
-        Encoding(NewName) <- "UTF-8"
-        rename(OldName,NewName,"codecat")
-        UpdateTableWidget(Widget=.rqda$.CodeCatWidget,FromdbTable="codecat")
+        NewName <- ginput("Enter new Cateory name. ", text=OldName, icon="info")
+        if (NewName!="") {
+          Encoding(NewName) <- "UTF-8"
+          rename(OldName,NewName,"codecat")
+          UpdateTableWidget(Widget=.rqda$.CodeCatWidget,FromdbTable="codecat")
+        }
       }
     }
   }
