@@ -116,13 +116,15 @@ File_RenameButton <- function(label="Rename", container=.rqda$.files_button,File
       }
       else {
         ## get the new file names
-        NewFileName <- ginput("Enter new file name. ", icon="info")
-        Encoding(NewFileName) <- "UTF-8"
-        ## otherwise, R transform it into local Encoding rather than keep it as UTF-8
-        ## Newfilename <- iconv(codename,from="UTF-8") ## now use UTF-8 for SQLite data set.
-        ## update the name in source table by a function
-        rename(selectedFN,NewFileName,"source")
-        ## (name is the only field should be modifed, as other table use fid rather than name)
+        NewFileName <- ginput("Enter new file name. ",text=selectedFN, icon="info")
+        if (NewFileName != "") {
+          Encoding(NewFileName) <- "UTF-8"
+          ## otherwise, R transform it into local Encoding rather than keep it as UTF-8
+          ## Newfilename <- iconv(codename,from="UTF-8") ## now use UTF-8 for SQLite data set.
+          ## update the name in source table by a function
+          rename(selectedFN,NewFileName,"source")
+          ## (name is the only field should be modifed, as other table use fid rather than name)
+        }
       }
     }
   }
