@@ -10,5 +10,7 @@ Merge *rqda from different coders.
 
 inter-coder reliability 
 
+assign file to F-cat by pop-up menu.
+
 ### less important
 should add document on the table structure.
