@@ -1,12 +1,21 @@
+2008-12-01
+	* enhance the rename buttons.
+	* bugfix of add buttons: continue only when click confirm in the ginput widget.
+	* New function write.FileList() to import files by batch.
+	
+2008-11-30
+	* fix some minor bugs.
+	
 2008-11-29
 	* enhancement of function list.deleted() and pdelete()
 	* better handle the encoding issue in ViewFileButton and handler for openning a file.
 	* Add F-Cat (file-category) to help organized the files.
 	* Add doubleclick handlers to CodeOfCat and FileOfCat to retrieve coding and open file.
 	* fix typo (Thanks Adrian Dusa)
+	* fix a minor bug of CodeNamesUpdate() and new_proj().
 	
 2008-11-25
-	*Take care of the warning from R CMD check
+	* Take care of the warning from R CMD check
 	
 2008-11-24
 	* Can back to the original file from Retrieved text chunck (by retrieval2 function).
